--- a/src/style.css
+++ b/src/style.css
@@ -57,12 +57,12 @@ header{
 
 .file li{
 	color:#aaa;
-	margin:0.2em;
 	font-family: Courier;
 }
 
 .file li span{
 	line-height: 1.5em;
+	margin: 0.1em;
 	display: inline-block;
 	color:#333;
 }
@@ -80,11 +80,34 @@ header{
 .file .insert span{
 
 	background: rgb(204,235,204);
+	margin-left: -8px;
+
+}
+.file .insert::before{
+
+	position: relative;
+	color:#5a5;
+	left:-12px;
+	content:'+';
 
 }
 
 .file .delete span{
 
 	background: rgb(235,204,204);
+	margin-left: -8px;
 
+}
+.file .delete::before{
+
+	position: relative;
+	color:#a55;
+	left:-12px;
+	content:'-';
+
+}
+
+.file span.blank{
+	height:1.5em;
+	vertical-align: top;
 }
