修复文件名过长时界面混乱的bug

--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,8 @@ header{
 	background:#eee;
 	border:1px solid #ccc;
 	-webkit-user-select:text;
-
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .file{
